🐛 fix(SimpleCarousel.tsx): change browserWidth threshold from 768 to 920 🔧 chore(homepage.scss): comment out margin-top property in .intro-content 🔧 chore(callOutBand.scss): add z-index property to & > div 🔧 chore(contentCards.scss): add position and z-index properties to .wc-content-card 🔧 chore(haveQuestions.scss): remove ::before pseudo-element and associated styles 🔧 chore(haveQuestions.scss): add margin-bottom and width properties to .have-questions 🔧 chore(wpcore/_colors.scss): add position and z-index properties to [class*='_column']

--- a/src/styles/layouts/_homepage.scss
+++ b/src/styles/layouts/_homepage.scss
@@ -10,9 +10,8 @@
 .intro-home-page {
   margin-top: clamp(-2rem, -2vw, -1rem);
   .intro-content {
-    margin-top: clamp(-4rem, -4vw, -2rem);
+    // margin-top: clamp(-4rem, -4vw, -2rem);
     @include mixins.sectionPadding;
-
     background: tokens.$c-white;
     z-index: tokens.$layer-10;
     position: relative;
